--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="/css/styles.css" rel="stylesheet" type="text/css" />
   </head>
 
-  <body class="h-screen">
+  <body class="h-screen home">
     <header
       class="fixed h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none"
     >
@@ -158,12 +158,12 @@
                 class="absolute left-[20%] top-0 h-screen w-auto z-10 hidden sm:block"
               />
               <div
-                class="w-full h-2/3 bg-arms-blue _anim-slide _anim-slide-up"
+                class="w-full h-2/3 bg-arms-blue anim-slide anim-slide-up"
               ></div>
             </div>
             <!-- width-1/3 (33.3%) -->
             <div
-              class="flex flex-col justify-between w-full sm:w-1/3 h-full sm:h-auto _anim-slide _anim-slide-up"
+              class="flex flex-col justify-between w-full sm:w-1/3 h-full sm:h-auto anim-slide anim-slide-up"
             >
               <div class="flex flex-col px-12 gap-3 mb-6 sm:mb-0">
                 <h5 class="leading-none font-extrabold text-8.5xl">somos</h5>
@@ -176,12 +176,8 @@
                   <br />e apreciamos resultados.
                 </p>
               </div>
-              <a
-                class="px-12 py-11 bg-white text-arms-black w-full flex flex-row items-center gap-6 text-xl cursor-pointer group _anim-slide"
-              >
-                <div
-                  class="flex flex-row items-center gap-6 group-hover:gap-24 group-hover:pl-6 transition-all text-xl"
-                >
+              <a class="button bg-white text-arms-black w-full">
+                <div>
                   NOSSOS SERVIÇOS
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -220,10 +216,10 @@
                 class="absolute right-0 bottom-0 top-[37%] w-auto z-10 hidden sm:block"
               />
               <div
-                class="h-1/2 w-2/3 flex flex-col px-12 gap-3 _anim-slide _anim-slide-left mb-6 sm:mb-0"
+                class="h-1/2 w-2/3 flex flex-col px-12 gap-3 anim-slide anim-slide-left mb-6 sm:mb-0"
               >
                 <h5
-                  class="leading-none font-extrabold _anim-slide _anim-slide-down text-8.5xl"
+                  class="leading-none font-extrabold anim-slide anim-slide-down text-8.5xl"
                 >
                   capicce!
                 </h5>
@@ -234,14 +230,12 @@
                 </p>
               </div>
               <div
-                class="h-1/2 w-full bg-arms-gray flex flex-col items-start _anim-slide _anim-slide-up"
+                class="h-1/2 w-full bg-arms-gray flex flex-col items-start anim-slide anim-slide-up"
               >
                 <a
-                  class="px-12 py-11 bg-arms-black text-white flex flex-row items-center gap-6 text-xl cursor-pointer group _anim-slide w-1/2"
+                  class="button bg-arms-black text-white w-1/2"
                 >
-                  <div
-                    class="flex flex-row items-center gap-6 group-hover:gap-24 group-hover:pl-6 transition-all text-xl"
-                  >
+                  <div>
                     NOSSOS CAPRICHOS
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -266,7 +260,7 @@
                 </a>
               </div>
             </div>
-            <div class="w-1/3 bg-arms-yellow _anim-slide _anim-slide-left"></div>
+            <div class="w-1/3 bg-arms-yellow anim-slide anim-slide-left"></div>
           </div>
         </div>
         <!-- Slide 03 -->
@@ -276,7 +270,7 @@
               src="assets/arms_03.png"
               class="absolute left-0 bottom-0 max-h-[90%] w-auto z-10 hidden sm:block"
             />
-            <div class="w-1/3 _anim-slide _anim-slide-left bg-white"></div>
+            <div class="w-1/3 anim-slide anim-slide-left bg-white"></div>
             <div
               class="flex items-end order-1 sm:order-none w-2/3 h-full flex-col relative"
             >
@@ -285,7 +279,7 @@
               >
                 <div class="absolute -left-1/3 ml-11">
                   <h5
-                    class="font-extrabold _anim-slide _anim-slide-down text-8.5xl -mt-14"
+                    class="font-extrabold anim-slide anim-slide-down text-8.5xl -mt-14"
                   >
                     projetar
                   </h5>
@@ -297,15 +291,13 @@
               </div>
               <div class="flex flex-row h-1/2 w-full">
                 <div
-                  class="w-1/2 h-full bg-white _anim-slide _anim-slide-up"
+                  class="w-1/2 h-full bg-white anim-slide anim-slide-up"
                 ></div>
                 <div class="w-1/2 h-full relative">
                   <a
-                    class="px-12 py-11 bg-arms-purple text-white cursor-pointer absolute -left-1/3 right-0 _anim-slide group"
+                    class="button bg-arms-purple text-white absolute -left-1/3 right-0"
                   >
-                    <div
-                      class="flex flex-row items-center gap-6 group-hover:gap-24 group-hover:pl-6 transition-all text-xl"
-                    >
+                    <div>
                       CONFIRA NOSSO TRAÇO
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -342,13 +334,13 @@
               src="assets/arms_04.png"
               class="absolute left-4pc top-0 w-auto z-10 hidden sm:block pointer-events-none"
             />
-            <div class="w-1/2 h-3/4 bg-arms-yellow flex items-end justify-end">
+            <div class="w-1/2 h-3/4 bg-arms-yellow flex items-end justify-end anim-slide anim-slide-up">
               <div class="h-1/2 w-1/2 bg-white"></div>
             </div>
             <div class="w-1/2 h-full flex flex-col justify-between">
               <div class="px-12 h-1/4 flex flex-col justify-end">
                 <h5
-                  class="leading-none font-extrabold _anim-slide _anim-slide-down text-8.5xl"
+                  class="leading-none font-extrabold anim-slide anim-slide-down text-8.5xl"
                 >
                   conta
                 </h5>
@@ -397,11 +389,9 @@
                 <div class="w-full h-1/2">
                   <button
                     type="submit"
-                    class="px-12 py-11 bg-arms-blue text-white flex flex-row items-center gap-6 text-xl cursor-pointer group _anim-slide w-full"
+                    class="button bg-arms-blue text-white w-full"
                   >
-                    <div
-                      class="flex flex-row items-center gap-6 group-hover:gap-24 group-hover:pl-6 transition-all text-xl"
-                    >
+                    <div>
                       ENVIAR
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -424,7 +414,7 @@
                       </svg>
                     </div>
                   </button>
-                  <div class="bg-white h-full flex flex-row items-tart gap-6">
+                  <div class="bg-white h-full flex flex-row items-tart gap-6 anim-slide anim-slide-right">
                     <div class="p-16 text-arms-black">
                       <h6 class="font-bold">OFFICE</h6>
                       <span class="block text-arms-black">
@@ -448,6 +438,6 @@
     </main>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="script.js" type="module"></script>
+    <script src="scripts/swiper_home.js" type="module"></script>
   </body>
 </html>
