✨ Link entre home.cappice e pagina cases / correcao de links de estilo e scripts

--- a/cases.html
+++ b/cases.html
@@ -276,7 +276,7 @@
     </main>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="scripts/swiper_cases.js" type="module"></script>
-    <script src="scripts/cards_cases.js" type="module"></script>
+    <script src="/scripts/swiper_cases.js" type="module"></script>
+    <script src="/scripts/cards_cases.js" type="module"></script>
   </body>
 </html>
