--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
               >
                 <a
                   class="button bg-arms-black text-white w-1/2"
+                  href="/cases.html"
                 >
                   <div>
                     NOSSOS CAPRICHOS
@@ -438,6 +439,6 @@
     </main>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="scripts/swiper_home.js" type="module"></script>
+    <script src="/scripts/swiper_home.js" type="module"></script>
   </body>
 </html>
