✨ Finalizando botoes pagina "cases" / Criando data-card-images que permite carregar imagens dinamicamente ao expandir os cards / Finalizando visao de card expandido

--- a/cases.html
+++ b/cases.html
@@ -148,9 +148,31 @@
           <h5 class=" text-center font-bold leading-none -mt-10 mb-20">cases</h5>
         </div>
         <div class="w-1/2 h-full text-arms-white hidden" id="card-title-wrapper">
-          <div class="pl-56 pt-12 cursor-pointer">
-            <h6 class="text-2xl">Brand Identity</h6>
-            <span>CUEPAS AÇAÍ</span>
+          <div class="pl-56 pt-12 cursor-pointer flex flex-row gap-6 items-center">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="53"
+              height="16"
+              viewBox="0 0 53 16"
+              fill="currentColor"
+              class="rotate-180"
+            >
+              <g clip-path="url(#clip0_75_278)">
+                <path
+                  d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
+                  fill="currentColor"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_75_278">
+                  <rect width="53" height="16" fill="currentColor" />
+                </clipPath>
+              </defs>
+            </svg>
+            <div>
+              <h6 class="text-2xl">Brand Identity</h6>
+              <span>CUEPAS AÇAÍ</span>
+            </div>
           </div>
         </div>
         <div class="absolute right-0 bottom-0 flex flex-row" style="width: 93%; height: 75%;" id="cards-wrapper">
@@ -162,46 +184,34 @@
               <div
                 data-card-title="Brand Identity"
                 data-card-subtitle="LANEVO"
-                data-card-images="'https://placehold.co/1400x950/AAFF33/FFFFFF/png', 'https://placehold.co/1400x950/AAFF33/FFFFFF/png', 'https://placehold.co/1400x950/AAFF33/FFFFFF/png'"
-                class="swiper-slide cursor-pointer hover:brightness-105 bg-arms-black flex flex-col items-start justify-center"
+                data-card-images="'assets/cases/01.jpeg', 'assets/cases/02.jpeg', 'assets/cases/03.jpeg', 'assets/cases/04.jpeg', 'assets/cases/05.jpeg', 'assets/cases/06.jpeg', 'assets/cases/07.jpeg', 'assets/cases/08.jpeg', 'assets/cases/09.jpeg', 'assets/cases/10.jpeg', 'assets/cases/11.jpeg', 'assets/cases/12.jpeg'"
+                class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black flex flex-col items-start justify-center"
               >
-                <div class="flex-grow w-full" style="background:url(https://placehold.co/350x350/AAFF33/FFFFFF/png); background-size:cover; background-position:center;"></div>
+                <div class="flex-grow w-full" style="background:url(assets/cases/01.jpeg); background-size:fit; background-position:center;"></div>
                 <div class="px-8 py-7 text-arms-white h-28 w-full">
                   <h6 class="text-2xl">Brand Identity</h6>
                   <span>LANEVO</span>
-                </div>
-              </div>
-              <div
-                data-card-title="Brand Identity"
-                data-card-subtitle="CUEPAS AÇAÍ"
-                data-card-images="'https://placehold.co/1400x950/FF33AA/FFFFFF/png', 'https://placehold.co/1400x950/FF33AA/FFFFFF/png', 'https://placehold.co/1400x950/FF33AA/FFFFFF/png'"
-                class="swiper-slide cursor-pointer hover:brightness-105 bg-arms-black-700 flex flex-col items-start justify-center"
-              >
-                <div class="flex-grow w-full" style="background:url(https://placehold.co/350x350/FF33AA/FFFFFF/png); background-size:cover; background-position:center;"></div>
-                <div class="px-8 py-7 text-arms-white h-28 w-full">
-                  <h6 class="text-2xl">Brand Identity</h6>
-                  <span>CUEPAS AÇAÍ</span>
-                </div>
-              </div>
-              <div
-                data-card-title="Brand Identity"
-                data-card-subtitle="ESG - PIRACICABA"
-                data-card-images="'https://placehold.co/1400x950/33AAFF/FFFFFF/png', 'https://placehold.co/1400x950/33AAFF/FFFFFF/png', 'https://placehold.co/1400x950/33AAFF/FFFFFF/png'"
-                class="swiper-slide cursor-pointer hover:brightness-105 bg-arms-black-600 flex flex-col items-start justify-center"
-              >
-                <div class="flex-grow w-full" style="background:url(https://placehold.co/350x350/33AAFF/FFFFFF/png); background-size:cover; background-position:center;"></div>
-                <div class="px-8 py-7 text-arms-white h-28 w-full">
-                  <h6 class="text-2xl">Brand Identity</h6>
-                  <span>ESG - PIRACICABA</span>
                 </div>
               </div>
               <div
                 data-card-title="Brand Identity"
                 data-card-subtitle="LANEVO"
-                data-card-images="'https://placehold.co/1400x950/66BB99/FFFFFF/png', 'https://placehold.co/1400x950/66BB99/FFFFFF/png', 'https://placehold.co/1400x950/66BB99/FFFFFF/png'"
-                class="swiper-slide cursor-pointer hover:brightness-105 bg-arms-black flex flex-col items-start justify-center"
+                data-card-images="'assets/cases_02/01.png', 'assets/cases_02/02.png', 'assets/cases_02/03.png', 'assets/cases_02/04.gif', 'assets/cases_02/05.png', 'assets/cases_02/06.gif'"
+                class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black flex flex-col items-start justify-center"
               >
-                <div class="flex-grow w-full" style="background:url(https://placehold.co/350x350/66BB99/FFFFFF/png); background-size:cover; background-position:center;"></div>
+                <div class="flex-grow w-full" style="background:url(assets/cases_02/01.png); background-size:fit; background-position:center;"></div>
+                <div class="px-8 py-7 text-arms-white h-28 w-full">
+                  <h6 class="text-2xl">Brand Identity</h6>
+                  <span>NSX</span>
+                </div>
+              </div>
+              <div
+                data-card-title="Brand Identity"
+                data-card-subtitle="LANEVO"
+                data-card-images="'assets/cases/01.jpeg', 'assets/cases/02.jpeg', 'assets/cases/03.jpeg', 'assets/cases/04.jpeg', 'assets/cases/05.jpeg', 'assets/cases/06.jpeg', 'assets/cases/07.jpeg', 'assets/cases/08.jpeg', 'assets/cases/09.jpeg', 'assets/cases/10.jpeg', 'assets/cases/11.jpeg', 'assets/cases/12.jpeg'"
+                class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black flex flex-col items-start justify-center"
+              >
+                <div class="flex-grow w-full" style="background:url(assets/cases/01.jpeg); background-size:fit; background-position:center;"></div>
                 <div class="px-8 py-7 text-arms-white h-28 w-full">
                   <h6 class="text-2xl">Brand Identity</h6>
                   <span>LANEVO</span>
@@ -209,26 +219,38 @@
               </div>
               <div
                 data-card-title="Brand Identity"
-                data-card-subtitle="CUEPAS AÇAÍ"
-                data-card-images="'https://placehold.co/1400x950/9BA36F/FFFFFF/png', 'https://placehold.co/1400x950/9BA36F/FFFFFF/png', 'https://placehold.co/1400x950/9BA36F/FFFFFF/png'"
-                class="swiper-slide cursor-pointer hover:brightness-105 bg-arms-black-700 flex flex-col items-start justify-center"
+                data-card-subtitle="LANEVO"
+                data-card-images="'assets/cases_02/01.png', 'assets/cases_02/02.png', 'assets/cases_02/03.png', 'assets/cases_02/04.gif', 'assets/cases_02/05.png', 'assets/cases_02/06.gif'"
+                class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black flex flex-col items-start justify-center"
               >
-                <div class="flex-grow w-full" style="background:url(https://placehold.co/350x350/9BA36F/FFFFFF/png); background-size:cover; background-position:center;"></div>
+                <div class="flex-grow w-full" style="background:url(assets/cases_02/01.png); background-size:fit; background-position:center;"></div>
                 <div class="px-8 py-7 text-arms-white h-28 w-full">
                   <h6 class="text-2xl">Brand Identity</h6>
-                  <span>CUEPAS AÇAÍ</span>
+                  <span>NSX</span>
                 </div>
               </div>
               <div
                 data-card-title="Brand Identity"
-                data-card-subtitle="ESG - PIRACICABA"
-                data-card-images="'https://placehold.co/1400x950/3333AA/FFFFFF/png', 'https://placehold.co/1400x950/3333AA/FFFFFF/png', 'https://placehold.co/1400x950/3333AA/FFFFFF/png'"
-                class="swiper-slide cursor-pointer hover:brightness-105 bg-arms-black-600 flex flex-col items-start justify-center"
+                data-card-subtitle="LANEVO"
+                data-card-images="'assets/cases/01.jpeg', 'assets/cases/02.jpeg', 'assets/cases/03.jpeg', 'assets/cases/04.jpeg', 'assets/cases/05.jpeg', 'assets/cases/06.jpeg', 'assets/cases/07.jpeg', 'assets/cases/08.jpeg', 'assets/cases/09.jpeg', 'assets/cases/10.jpeg', 'assets/cases/11.jpeg', 'assets/cases/12.jpeg'"
+                class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black flex flex-col items-start justify-center"
               >
-                <div class="flex-grow w-full" style="background:url(https://placehold.co/350x350/3333AA/FFFFFF/png); background-size:cover; background-position:center;"></div>
+                <div class="flex-grow w-full" style="background:url(assets/cases/01.jpeg); background-size:fit; background-position:center;"></div>
                 <div class="px-8 py-7 text-arms-white h-28 w-full">
                   <h6 class="text-2xl">Brand Identity</h6>
-                  <span>ESG - PIRACICABA</span>
+                  <span>LANEVO</span>
+                </div>
+              </div>
+              <div
+                data-card-title="Brand Identity"
+                data-card-subtitle="LANEVO"
+                data-card-images="'assets/cases_02/01.png', 'assets/cases_02/02.png', 'assets/cases_02/03.png', 'assets/cases_02/04.gif', 'assets/cases_02/05.png', 'assets/cases_02/06.gif'"
+                class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black flex flex-col items-start justify-center"
+              >
+                <div class="flex-grow w-full" style="background:url(assets/cases_02/01.png); background-size:fit; background-position:center;"></div>
+                <div class="px-8 py-7 text-arms-white h-28 w-full">
+                  <h6 class="text-2xl">Brand Identity</h6>
+                  <span>NSX</span>
                 </div>
               </div>
             </div>
@@ -244,14 +266,61 @@
               </p>
             </div>
             <div class="flex flex-col w-full">
-              <button id="button-slide-next" class="button bg-arms-white text-arms-black h-28"><div>PRÓXIMO</div></button>
-              <button id="button-slide-prev" class="button bg-arms-black text-arms-white h-28"><div>ANTERIOR</div></button>
+              <button id="button-slide-next" class="button bg-arms-white text-arms-black h-28">
+                <div>
+                  PRÓXIMO
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="53"
+                    height="16"
+                    viewBox="0 0 53 16"
+                    fill="currentColor"
+                  >
+                    <g clip-path="url(#clip0_75_278)">
+                      <path
+                        d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
+                        fill="currentColor"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_75_278">
+                        <rect width="53" height="16" fill="currentColor" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+              </button>
+              <button id="button-slide-prev" class="button bg-arms-black text-arms-white h-28">
+                <div>
+                  ANTERIOR
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="53"
+                    height="16"
+                    viewBox="0 0 53 16"
+                    fill="currentColor"
+                    class="rotate-180"
+                  >
+                    <g clip-path="url(#clip0_75_278)">
+                      <path
+                        d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
+                        fill="currentColor"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_75_278">
+                        <rect width="53" height="16" fill="currentColor" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+              </button>
             </div>
           </div>
         </div>
         <div class="absolute right-0 bottom-0 flex flex-row hidden" style="width: 93%; height: 75%;" id="card-detail-wrapper">
           <div class="h-max w-full bg-white flex flex-row overflow-y-auto z-10">
-            <div style="width: 75%;" id="card-images-wrapper" class="h-max">
+            <div style="width: 75%;" id="card-images-wrapper" class="h-max flex items-center justify-center flex-col">
               <!-- <img src="https://placehold.co/1400x950.png" alt="">
               <img src="https://placehold.co/1400x950.png" alt="">
               <img src="https://placehold.co/1400x950.png" alt="">
@@ -262,8 +331,55 @@
               <!-- Slide navigation -->
               <div class="h-full flex flex-col z-10 bg-white pt-64">
                 <div class="flex flex-col w-full">
-                  <button id="button-card-next" class="button bg-arms-gray text-arms-black h-28"><div>PRÓXIMO</div></button>
-                  <button id="button-card-prev" class="button bg-arms-black text-arms-white h-28"><div>ANTERIOR</div></button>
+                  <button id="button-card-next" class="button bg-arms-gray text-arms-black h-28">
+                    <div>
+                      PRÓXIMO
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="53"
+                        height="16"
+                        viewBox="0 0 53 16"
+                        fill="currentColor"
+                      >
+                        <g clip-path="url(#clip0_75_278)">
+                          <path
+                            d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
+                            fill="currentColor"
+                          />
+                        </g>
+                        <defs>
+                          <clipPath id="clip0_75_278">
+                            <rect width="53" height="16" fill="currentColor" />
+                          </clipPath>
+                        </defs>
+                      </svg>
+                    </div>
+                  </button>
+                  <button id="button-card-prev" class="button bg-arms-black text-arms-white h-28">
+                    <div>
+                      ANTERIOR
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="53"
+                        height="16"
+                        viewBox="0 0 53 16"
+                        fill="currentColor"
+                        class="rotate-180"
+                      >
+                        <g clip-path="url(#clip0_75_278)">
+                          <path
+                            d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
+                            fill="currentColor"
+                          />
+                        </g>
+                        <defs>
+                          <clipPath id="clip0_75_278">
+                            <rect width="53" height="16" fill="currentColor" />
+                          </clipPath>
+                        </defs>
+                      </svg>
+                    </div>
+                  </button>
                 </div>
               </div>
             </div>
