--- a/index.html
+++ b/index.html
@@ -19,42 +19,44 @@
     <header
       class="fixed h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none"
     >
-      <!-- Logo -->
-      <svg
-        width="64"
-        height="62"
-        viewBox="0 0 64 62"
-        fill="currentColor"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <g id="Camada_1" clip-path="url(#clip0_138_63)">
-          <path
-            id="Vector"
-            d="M0 29.4301L16.3181 0L32.6337 29.4301H0Z"
-            fill="currentColor"
-          />
-          <path
-            id="Vector_2"
-            d="M63.9425 14.1069C64.5174 6.95298 60.9716 0.0156599 50.4412 0.0156599V0H35.6935V29.4301H63.9425L58.2331 23.3123C61.029 20.7337 63.6133 18.1915 63.9425 14.1069Z"
-            fill="currentColor"
-          />
-          <path
-            id="Vector_3"
-            d="M0 32.5698V61.9999H9.25522V54.6998L16.3181 61.9999L23.3784 54.7572V61.9999H32.6337V32.5698L16.3181 36.2943L0 32.5698Z"
-            fill="currentColor"
-          />
-          <path
-            id="Vector_4"
-            d="M63.9713 32.5698H35.7222V44.4348L43.1222 52.189H35.7222V61.9999H63.9713V45.0977L56.7254 37.474H63.9713V32.5698Z"
-            fill="currentColor"
-          />
-        </g>
-        <defs>
-          <clipPath id="clip0_138_63">
-            <rect width="64" height="62" fill="currentColor" />
-          </clipPath>
-        </defs>
-      </svg>
+      <a href="/index.html" class="cursor-pointer pointer-events-auto">
+        <!-- Logo -->
+        <svg
+          width="64"
+          height="62"
+          viewBox="0 0 64 62"
+          fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g id="Camada_1" clip-path="url(#clip0_138_63)">
+            <path
+              id="Vector"
+              d="M0 29.4301L16.3181 0L32.6337 29.4301H0Z"
+              fill="currentColor"
+            />
+            <path
+              id="Vector_2"
+              d="M63.9425 14.1069C64.5174 6.95298 60.9716 0.0156599 50.4412 0.0156599V0H35.6935V29.4301H63.9425L58.2331 23.3123C61.029 20.7337 63.6133 18.1915 63.9425 14.1069Z"
+              fill="currentColor"
+            />
+            <path
+              id="Vector_3"
+              d="M0 32.5698V61.9999H9.25522V54.6998L16.3181 61.9999L23.3784 54.7572V61.9999H32.6337V32.5698L16.3181 36.2943L0 32.5698Z"
+              fill="currentColor"
+            />
+            <path
+              id="Vector_4"
+              d="M63.9713 32.5698H35.7222V44.4348L43.1222 52.189H35.7222V61.9999H63.9713V45.0977L56.7254 37.474H63.9713V32.5698Z"
+              fill="currentColor"
+            />
+          </g>
+          <defs>
+            <clipPath id="clip0_138_63">
+              <rect width="64" height="62" fill="currentColor" />
+            </clipPath>
+          </defs>
+        </svg>
+      </a>
 
       <!-- Social Icons -->
       <div class="flex flex-row gap-4 items-center relative pr-12">
