📦 Reorganizando arquivos em diretorio publico de assets

--- a/cases.html
+++ b/cases.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://gistcdn.githack.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css"
     />
-    <link href="/css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/styles.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body class="cases h-screen overflow-y-hidden">
@@ -186,10 +186,10 @@
               <div
                 data-card-title="Brand Identity"
                 data-card-subtitle="LANEVO"
-                data-card-images="'assets/cases/01.jpeg', 'assets/cases/02.jpeg', 'assets/cases/03.jpeg', 'assets/cases/04.jpeg', 'assets/cases/05.jpeg', 'assets/cases/06.jpeg', 'assets/cases/07.jpeg', 'assets/cases/08.jpeg', 'assets/cases/09.jpeg', 'assets/cases/10.jpeg', 'assets/cases/11.jpeg', 'assets/cases/12.jpeg'"
+                data-card-images="'assets/imgs/cases_01/01.jpeg', 'assets/imgs/cases_01/02.jpeg', 'assets/imgs/cases_01/03.jpeg', 'assets/imgs/cases_01/04.jpeg', 'assets/imgs/cases_01/05.jpeg', 'assets/imgs/cases_01/06.jpeg', 'assets/imgs/cases_01/07.jpeg', 'assets/imgs/cases_01/08.jpeg', 'assets/imgs/cases_01/09.jpeg', 'assets/imgs/cases_01/10.jpeg', 'assets/imgs/cases_01/11.jpeg', 'assets/imgs/cases_01/12.jpeg'"
                 class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black-800 flex flex-col items-start justify-center"
               >
-                <div class="flex-grow w-full" style="background:url(assets/cases/01.jpeg); background-size:fit; background-position:center;"></div>
+                <div class="flex-grow w-full" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
                 <div class="px-8 py-7 text-arms-white h-28 w-full">
                   <h6 class="text-2xl">Brand Identity</h6>
                   <span>LANEVO</span>
@@ -198,10 +198,10 @@
               <div
                 data-card-title="Brand Identity"
                 data-card-subtitle="NSX"
-                data-card-images="'assets/cases_02/01.png', 'assets/cases_02/02.png', 'assets/cases_02/03.png', 'assets/cases_02/04.gif', 'assets/cases_02/05.png', 'assets/cases_02/06.gif'"
+                data-card-images="'assets/imgs/cases_02/01.png', 'assets/imgs/cases_02/02.png', 'assets/imgs/cases_02/03.png', 'assets/imgs/cases_02/04.gif', 'assets/imgs/cases_02/05.png', 'assets/imgs/cases_02/06.gif'"
                 class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black-700 flex flex-col items-start justify-center"
               >
-                <div class="flex-grow w-full" style="background:url(assets/cases_02/01.png); background-size:fit; background-position:center;"></div>
+                <div class="flex-grow w-full" style="background:url(assets/imgs/cases_02/01.png); background-size:fit; background-position:center;"></div>
                 <div class="px-8 py-7 text-arms-white h-28 w-full">
                   <h6 class="text-2xl">Brand Identity</h6>
                   <span>NSX</span>
@@ -210,10 +210,10 @@
               <div
                 data-card-title="Brand Identity"
                 data-card-subtitle="LANEVO"
-                data-card-images="'assets/cases/01.jpeg', 'assets/cases/02.jpeg', 'assets/cases/03.jpeg', 'assets/cases/04.jpeg', 'assets/cases/05.jpeg', 'assets/cases/06.jpeg', 'assets/cases/07.jpeg', 'assets/cases/08.jpeg', 'assets/cases/09.jpeg', 'assets/cases/10.jpeg', 'assets/cases/11.jpeg', 'assets/cases/12.jpeg'"
+                data-card-images="'assets/imgs/cases_01/01.jpeg', 'assets/imgs/cases_01/02.jpeg', 'assets/imgs/cases_01/03.jpeg', 'assets/imgs/cases_01/04.jpeg', 'assets/imgs/cases_01/05.jpeg', 'assets/imgs/cases_01/06.jpeg', 'assets/imgs/cases_01/07.jpeg', 'assets/imgs/cases_01/08.jpeg', 'assets/imgs/cases_01/09.jpeg', 'assets/imgs/cases_01/10.jpeg', 'assets/imgs/cases_01/11.jpeg', 'assets/imgs/cases_01/12.jpeg'"
                 class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black-600 flex flex-col items-start justify-center"
               >
-                <div class="flex-grow w-full" style="background:url(assets/cases/01.jpeg); background-size:fit; background-position:center;"></div>
+                <div class="flex-grow w-full" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
                 <div class="px-8 py-7 text-arms-white h-28 w-full">
                   <h6 class="text-2xl">Brand Identity</h6>
                   <span>LANEVO</span>
@@ -222,10 +222,10 @@
               <div
                 data-card-title="Brand Identity"
                 data-card-subtitle="NSX"
-                data-card-images="'assets/cases_02/01.png', 'assets/cases_02/02.png', 'assets/cases_02/03.png', 'assets/cases_02/04.gif', 'assets/cases_02/05.png', 'assets/cases_02/06.gif'"
+                data-card-images="'assets/imgs/cases_02/01.png', 'assets/imgs/cases_02/02.png', 'assets/imgs/cases_02/03.png', 'assets/imgs/cases_02/04.gif', 'assets/imgs/cases_02/05.png', 'assets/imgs/cases_02/06.gif'"
                 class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black-500 flex flex-col items-start justify-center"
               >
-                <div class="flex-grow w-full" style="background:url(assets/cases_02/01.png); background-size:fit; background-position:center;"></div>
+                <div class="flex-grow w-full" style="background:url(assets/imgs/cases_02/01.png); background-size:fit; background-position:center;"></div>
                 <div class="px-8 py-7 text-arms-white h-28 w-full">
                   <h6 class="text-2xl">Brand Identity</h6>
                   <span>NSX</span>
@@ -234,10 +234,10 @@
               <div
                 data-card-title="Brand Identity"
                 data-card-subtitle="LANEVO"
-                data-card-images="'assets/cases/01.jpeg', 'assets/cases/02.jpeg', 'assets/cases/03.jpeg', 'assets/cases/04.jpeg', 'assets/cases/05.jpeg', 'assets/cases/06.jpeg', 'assets/cases/07.jpeg', 'assets/cases/08.jpeg', 'assets/cases/09.jpeg', 'assets/cases/10.jpeg', 'assets/cases/11.jpeg', 'assets/cases/12.jpeg'"
+                data-card-images="'assets/imgs/cases_01/01.jpeg', 'assets/imgs/cases_01/02.jpeg', 'assets/imgs/cases_01/03.jpeg', 'assets/imgs/cases_01/04.jpeg', 'assets/imgs/cases_01/05.jpeg', 'assets/imgs/cases_01/06.jpeg', 'assets/imgs/cases_01/07.jpeg', 'assets/imgs/cases_01/08.jpeg', 'assets/imgs/cases_01/09.jpeg', 'assets/imgs/cases_01/10.jpeg', 'assets/imgs/cases_01/11.jpeg', 'assets/imgs/cases_01/12.jpeg'"
                 class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black-600 flex flex-col items-start justify-center"
               >
-                <div class="flex-grow w-full" style="background:url(assets/cases/01.jpeg); background-size:fit; background-position:center;"></div>
+                <div class="flex-grow w-full" style="background:url(assets/imgs/cases_01/01.jpeg); background-size:fit; background-position:center;"></div>
                 <div class="px-8 py-7 text-arms-white h-28 w-full">
                   <h6 class="text-2xl">Brand Identity</h6>
                   <span>LANEVO</span>
@@ -246,10 +246,10 @@
               <div
                 data-card-title="Brand Identity"
                 data-card-subtitle="NSX"
-                data-card-images="'assets/cases_02/01.png', 'assets/cases_02/02.png', 'assets/cases_02/03.png', 'assets/cases_02/04.gif', 'assets/cases_02/05.png', 'assets/cases_02/06.gif'"
+                data-card-images="'assets/imgs/cases_02/01.png', 'assets/imgs/cases_02/02.png', 'assets/imgs/cases_02/03.png', 'assets/imgs/cases_02/04.gif', 'assets/imgs/cases_02/05.png', 'assets/imgs/cases_02/06.gif'"
                 class="swiper-slide cursor-pointer saturate-0 hover:saturate-100 transition-all  bg-arms-black-700 flex flex-col items-start justify-center"
               >
-                <div class="flex-grow w-full" style="background:url(assets/cases_02/01.png); background-size:fit; background-position:center;"></div>
+                <div class="flex-grow w-full" style="background:url(assets/imgs/cases_02/01.png); background-size:fit; background-position:center;"></div>
                 <div class="px-8 py-7 text-arms-white h-28 w-full">
                   <h6 class="text-2xl">Brand Identity</h6>
                   <span>NSX</span>
@@ -394,7 +394,7 @@
     </main>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="/scripts/swiper_cases.js" type="module"></script>
-    <script src="/scripts/cards_cases.js" type="module"></script>
+    <script src="/assets/js/swiper_cases.js" type="module"></script>
+    <script src="/assets/js/cards_cases.js" type="module"></script>
   </body>
 </html>
