--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://gistcdn.githack.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css"
     />
-    <link href="/css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/styles.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body class="h-screen home">
@@ -156,7 +156,7 @@
             <!-- width-2/3 (66.6%) -->
             <div class="flex items-end w-full order-1 sm:order-none sm:w-2/3">
               <img
-                src="assets/arms_01.png"
+                src="assets/imgs/arms_01.png"
                 class="absolute left-[20%] top-0 h-screen w-auto z-10 hidden sm:block"
               />
               <div
@@ -214,7 +214,7 @@
               class="flex items-center order-1 sm:order-none w-2/3 h-full flex-col"
             >
               <img
-                src="assets/arms_02.png"
+                src="assets/imgs/arms_02.png"
                 class="absolute right-0 bottom-0 top-[37%] w-auto z-10 hidden sm:block"
               />
               <div
@@ -270,7 +270,7 @@
         <div class="swiper-slide w-full h-full flex justify-end items-end">
           <div class="w-full h-2/3 flex flex-col sm:flex-row">
             <img
-              src="assets/arms_03.png"
+              src="assets/imgs/arms_03.png"
               class="absolute left-0 bottom-0 max-h-[90%] w-auto z-10 hidden sm:block"
             />
             <div class="w-1/3 anim-slide anim-slide-left bg-white"></div>
@@ -334,7 +334,7 @@
         >
           <div class="w-full h-4/5 flex flex-col sm:flex-row items-end">
             <img
-              src="assets/arms_04.png"
+              src="assets/imgs/arms_04.png"
               class="absolute left-4pc top-0 w-auto z-10 hidden sm:block pointer-events-none"
             />
             <div class="w-1/2 h-3/4 bg-arms-yellow flex items-end justify-end anim-slide anim-slide-up">
@@ -441,6 +441,6 @@
     </main>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="/scripts/swiper_home.js" type="module"></script>
+    <script src="/assets/js/swiper_home.js" type="module"></script>
   </body>
 </html>
