📦 Reorganizando arquivos em diretorio publico de assets

--- a/cases.html
+++ b/cases.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://gistcdn.githack.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css"
     />
-    <link href="/assets/css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="./assets/css/styles.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body class="cases h-screen overflow-y-hidden">
@@ -394,7 +394,7 @@
     </main>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="/assets/js/swiper_cases.js" type="module"></script>
-    <script src="/assets/js/cards_cases.js" type="module"></script>
+    <script src="./assets/js/swiper_cases.js" type="module"></script>
+    <script src="./assets/js/cards_cases.js" type="module"></script>
   </body>
 </html>
