📦 Reorganizando arquivos em diretorio publico de assets

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header
       class="fixed h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none"
     >
-      <a href="/index.html" class="cursor-pointer pointer-events-auto">
+      <a href="./index.html" class="cursor-pointer pointer-events-auto">
         <!-- Logo -->
         <svg
           width="64"
@@ -236,7 +236,7 @@
               >
                 <a
                   class="button bg-arms-black text-white w-1/2"
-                  href="/cases.html"
+                  href="./cases.html"
                 >
                   <div>
                     NOSSOS CAPRICHOS
