--- a/cases.html
+++ b/cases.html
@@ -321,7 +321,7 @@
           </div>
         </div>
         <div class="absolute right-0 bottom-0 flex flex-row hidden" style="width: 93%; height: 75%;" id="card-detail-wrapper">
-          <div class="h-max w-full bg-white flex flex-row overflow-y-auto z-10">
+          <div class="h-max w-full flex flex-row overflow-y-auto z-10">
             <div style="width: 75%;" id="card-images-wrapper" class="h-max flex items-center justify-center flex-col">
               <!-- <img src="https://placehold.co/1400x950.png" alt="">
               <img src="https://placehold.co/1400x950.png" alt="">
@@ -329,9 +329,9 @@
               <img src="https://placehold.co/1400x950.png" alt="">
               <img src="https://placehold.co/1400x950.png" alt=""> -->
             </div>
-            <div style="width: 25%;">
+            <div style="width: calc(23.25%); top:calc(100% - 224px);" class="fixed right-0 hidden z-10" id="card-detail-navigation">
               <!-- Slide navigation -->
-              <div class="h-full flex flex-col z-10 bg-white pt-64">
+              <div class="h-full flex flex-col z-1">
                 <div class="flex flex-col w-full">
                   <button id="button-card-next" class="button bg-arms-gray text-arms-black h-28">
                     <div>
