✨ página index.html: criacao linha indicadora em menu

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 
       <!-- Social Icons -->
       <div class="flex flex-row gap-4 items-center relative pr-12">
+        <div class="mr-16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="34" height="2" viewBox="0 0 34 2" fill="currentColor">
+            <path d="M0 1H34" stroke="currentColor"/>
+          </svg>
+        </div>
         <a
           class="cursor-pointer hover:opacity-75 transition-opacity pointer-events-auto"
           href=""
