✨ Página cases.html 	- remoção animação título cases 	- adição animação título e descrição em card preto 	- criação seta de navegação abaixo da logo 	- criação controle de histórico de navegação (voltar/avancar do navegador) 	- criação controle de histórico de expansão de cards 	- associação entre seta de navegação e histórico de navegação

--- a/cases.html
+++ b/cases.html
@@ -19,44 +19,68 @@
     <header
       class="fixed h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none light"
     >
-      <a href="./index.html#capicce" class="cursor-pointer pointer-events-auto">
-        <!-- Logo -->
-        <svg
-          width="64"
-          height="62"
-          viewBox="0 0 64 62"
-          fill="currentColor"
+      <div>
+        <a href="./index.html#capicce" class="cursor-pointer pointer-events-auto" id="logo">
+          <!-- Logo -->
+          <svg
+            width="64"
+            height="62"
+            viewBox="0 0 64 62"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="Camada_1" clip-path="url(#clip0_138_63)">
+              <path
+                id="Vector"
+                d="M0 29.4301L16.3181 0L32.6337 29.4301H0Z"
+                fill="currentColor"
+              />
+              <path
+                id="Vector_2"
+                d="M63.9425 14.1069C64.5174 6.95298 60.9716 0.0156599 50.4412 0.0156599V0H35.6935V29.4301H63.9425L58.2331 23.3123C61.029 20.7337 63.6133 18.1915 63.9425 14.1069Z"
+                fill="currentColor"
+              />
+              <path
+                id="Vector_3"
+                d="M0 32.5698V61.9999H9.25522V54.6998L16.3181 61.9999L23.3784 54.7572V61.9999H32.6337V32.5698L16.3181 36.2943L0 32.5698Z"
+                fill="currentColor"
+              />
+              <path
+                id="Vector_4"
+                d="M63.9713 32.5698H35.7222V44.4348L43.1222 52.189H35.7222V61.9999H63.9713V45.0977L56.7254 37.474H63.9713V32.5698Z"
+                fill="currentColor"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0_138_63">
+                <rect width="64" height="62" fill="currentColor" />
+              </clipPath>
+            </defs>
+          </svg>
+        </a>
+        <a class="cursor-pointer pointer-events-auto mt-5" id="page-back-nagivation">
+          <svg
           xmlns="http://www.w3.org/2000/svg"
-        >
-          <g id="Camada_1" clip-path="url(#clip0_138_63)">
-            <path
-              id="Vector"
-              d="M0 29.4301L16.3181 0L32.6337 29.4301H0Z"
-              fill="currentColor"
-            />
-            <path
-              id="Vector_2"
-              d="M63.9425 14.1069C64.5174 6.95298 60.9716 0.0156599 50.4412 0.0156599V0H35.6935V29.4301H63.9425L58.2331 23.3123C61.029 20.7337 63.6133 18.1915 63.9425 14.1069Z"
-              fill="currentColor"
-            />
-            <path
-              id="Vector_3"
-              d="M0 32.5698V61.9999H9.25522V54.6998L16.3181 61.9999L23.3784 54.7572V61.9999H32.6337V32.5698L16.3181 36.2943L0 32.5698Z"
-              fill="currentColor"
-            />
-            <path
-              id="Vector_4"
-              d="M63.9713 32.5698H35.7222V44.4348L43.1222 52.189H35.7222V61.9999H63.9713V45.0977L56.7254 37.474H63.9713V32.5698Z"
-              fill="currentColor"
-            />
-          </g>
-          <defs>
-            <clipPath id="clip0_138_63">
-              <rect width="64" height="62" fill="currentColor" />
-            </clipPath>
-          </defs>
-        </svg>
-      </a>
+          width="53"
+          height="16"
+          viewBox="0 0 53 16"
+          fill="currentColor"
+          class="rotate-180 mt-5"
+          >
+            <g clip-path="url(#clip0_75_278)">
+              <path
+                d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
+                fill="currentColor"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0_75_278">
+                <rect width="53" height="16" fill="currentColor" />
+              </clipPath>
+            </defs>
+          </svg>
+        </a>
+      </div>
 
       <!-- Social Icons -->
       <div class="flex flex-row gap-4 items-center relative pr-12">
@@ -146,40 +170,12 @@
     <!-- Slider main container -->
     <main class="w-full h-full flex flex-col sm:flex-row items-end">
       <div class="w-full h-2/3 flex flex-col sm:flex-row items-end relative">
-        <div class="w-1/2 h-full text-arms-white" id="page-title-wrapper">
+        <div class="w-1/2 h-full text-arms-white">
           <h5 class=" text-center font-bold leading-none -mt-10 mb-20">cases</h5>
         </div>
-        <div class="w-1/2 h-full text-arms-white hidden" id="card-title-wrapper">
-          <div class="pl-56 pt-12 cursor-pointer flex flex-row gap-6 items-center">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="53"
-              height="16"
-              viewBox="0 0 53 16"
-              fill="currentColor"
-              class="rotate-180"
-            >
-              <g clip-path="url(#clip0_75_278)">
-                <path
-                  d="M53 7.97553L44.9399 0L43.4178 1.50871L48.9259 6.95837H0V9.0927H48.8936L43.4393 14.4913L44.9614 16L53 8.04575L52.9656 8.00957L53 7.97553Z"
-                  fill="currentColor"
-                />
-              </g>
-              <defs>
-                <clipPath id="clip0_75_278">
-                  <rect width="53" height="16" fill="currentColor" />
-                </clipPath>
-              </defs>
-            </svg>
-            <div>
-              <h6 class="text-2xl">Brand Identity</h6>
-              <span>CUEPAS AÇAÍ</span>
-            </div>
-          </div>
-        </div>
-        <div class="absolute right-0 bottom-0 flex flex-row" style="width: 93%; height: 75%;" id="cards-wrapper">
+        <div class="absolute right-0 bottom-0 flex flex-row justify-end" style="width: 93%; height: 75%;">
           <!-- Slider main container -->
-          <div class="swiper">
+          <div class="swiper" id="cards-wrapper" style="width: 75%;">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
@@ -258,16 +254,16 @@
             </div>
           </div>
           <!-- Slide navigation -->
-          <div class="h-full flex flex-col justify-between items-start z-10 w-1/2">
-            <div class="flex flex-col gap-3 px-12">
-              <h4 class="text-2xl text-arms-black font bold">
+          <div class="h-full flex flex-col justify-between items-start z-10" style="width: 25%">
+            <div class="flex flex-col gap-3 px-12" id="card-title-wrapper">
+              <h4 class="text-2xl font bold">
                 Loren Ipsum Title
               </h4>
-              <p class="text-base text-arms-black">
+              <p class="text-base">
                 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
               </p>
             </div>
-            <div class="flex flex-col w-full">
+            <div class="flex flex-col w-full" id="card-nagivation-wrapper">
               <button id="button-slide-next" class="button bg-arms-white text-arms-black h-28">
                 <div>
                   PRÓXIMO
