✨ Nova página criamos.html 	- Criação da estrutura geral da págin 	- Remoção seta abaixo da logo 	- Criação animação abas superiores ao clicar 	- Criação lógica de cores de abas 	- Criação lógica de exibição de conteúdo por abas

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                   <br />e apreciamos resultados.
                 </p>
               </div>
-              <a class="button bg-white text-arms-black w-full">
+              <a href="./criamos.html" class="button bg-white text-arms-black w-full">
                 <div>
                   NOSSOS SERVIÇOS
                   <svg
