🩹 pág. criamos.html: correção dos links (voltar ao site e logo)

--- a/criamos.html
+++ b/criamos.html
@@ -20,7 +20,7 @@
       class="fixed h-1/4 flex flex-row items-center justify-between px-12 sm:px-24 left-0 top-0 right-0 z-20 pointer-events-none light"
     >
       <div>
-        <a href="./index.html#capicce" class="cursor-pointer pointer-events-auto" id="logo">
+        <a href="./index.html" class="cursor-pointer pointer-events-auto" id="logo">
           <!-- Logo -->
           <svg
             width="64"
@@ -289,7 +289,7 @@
               </p>
             </div>
             <div class="flex flex-col w-full" id="card-nagivation-wrapper">
-              <button id="button-slide-prev" class="button bg-arms-purple text-arms-white h-28">
+              <a href="./index.html" id="button-slide-prev" class="button bg-arms-purple text-arms-white h-28">
                 <div>
                   VOLTAR AO SITE
                   <svg
@@ -313,7 +313,7 @@
                     </defs>
                   </svg>
                 </div>
-              </button>
+              </a>
             </div>
           </div>
         </div>
