✨ pág. criamos.html: criação abas restantes

--- a/criamos.html
+++ b/criamos.html
@@ -272,6 +272,27 @@
                   Seo
                 </p>
               </div>
+              <div class="px-5 hidden" data-tab-parent="1">
+                <p class="text-arms-black text-base font-bold">Ilustração</p>
+                <p class="text-xs leading-3">
+                  -<br>
+                  Funciona! ✨
+                </p>
+              </div>
+              <div class="px-5 hidden" data-tab-parent="2">
+                <p class="text-arms-black text-base font-bold">Digital Strategy</p>
+                <p class="text-xs leading-3">
+                  -<br>
+                  Funciona! ✨
+                </p>
+              </div>
+              <div class="px-5 hidden" data-tab-parent="3">
+                <p class="text-arms-black text-base font-bold">Social Media</p>
+                <p class="text-xs leading-3">
+                  -<br>
+                  Funciona! ✨
+                </p>
+              </div>
             </div>
           </div>
           <!-- Slide navigation -->
